# android_hardware_ti_syslink

./: Android.mk  README  build_directions.sh
bridge/: Makefile.am  autogen.sh  configure.ac  libdspbridge.pc.in
bridge/api/: Makefile.am
bridge/api/inc/: Makefile.am  strmdefs.h
bridge/api/make/: Makefile.am  build.mk  start.mk
bridge/api/src/: Makefile  Makefile.am
bridge/api/src/bridge/: DSPProcessor.c  Makefile  Makefile.am
bridge/api/src/qos/: Makefile.am
bridge/samples/: Makefile.am
bridge/samples/inc/: Makefile.am  dbdefs.h  getsection.h  strmdefs.h
bridge/samples/make/: Makefile.am  build.mk
bridge/samples/src/: Makefile.am
bridge/samples/src/cexec/: Makefile  Makefile.am  build.mk  start.mk
bridge/samples/src/crashmon/: CrashMon.c  Makefile  Makefile.am  faultapp.c
bridge/samples/src/dmmcopy/: Makefile  Makefile.am  dmmcopy.c
bridge/samples/src/dynreg/: Makefile  Makefile.am  build.mk  cload.c  dload_internal.h  doff.h  getsection.c
bridge/samples/src/ping/: Makefile  Makefile.am
bridge/samples/src/qostest/: Makefile  Makefile.am  qostest.c
bridge/samples/src/scale/: Makefile  Makefile.am
bridge/samples/src/strmcopy/: Makefile  Makefile.am
bridge/samples/src/zerocopymsg/: Makefile  Makefile.am
syslink/api/include/: ArrayList.h  Gate.h  GateHWSpinLockDrv.h  GateHWSpinLockDrvDefs.h  GateMutex.h  GatePeterson.h  GateSpinlock.h  HeapBufDrv.h  HeapBufDrvDefs.h  IPCManager.h  IpcCmdBase.h  IpcDrvDefs.h  IpcUsr.h  ListMPSharedMemoryDrv.h  Makefile.am  MemoryDefs.h  MessageQ.h  MessageQDrvDefs.h  MessageQTransportShmDrv.h  MessageQTransportShmDrvDefs.h  MultiProc.h  MultiProcDrv.h  MultiProcDrvDefs.h  NameServerDrv.h  NameServerRemoteNotifyDrvDefs.h  NotifyDriverDefs.h  NotifyDriverShm.h  NotifyDriverShmDrvDefs.h  NotifyDriverShmDrvUsr.h  NotifyDrvDefs.h  OsalPrint.h  OsalSemaphore.h  ProcDEH.h  ProcMMU.h  ProcMgr.h  ProcMgrDrvDefs.h  Queue.h  RcmClient.h  RcmServer.h  RcmTypes.h  (+55 more)
syslink/api/include/ti/ipc/: GateMP.h  Ipc.h  MessageQ.h  MultiProc.h  SharedRegion.h
syslink/api/src/: Makefile  Makefile.am  Makefile.mk
syslink/api/src/ipc/: Android.mk  GateHWSpinLockDrv.c  GatePetersonDrv.c  Heap.c  HeapBufDrv.c  IPCManager.c  List.c  ListMP.c  ListMPSharedMemory.c  ListMPSharedMemoryDrv.c  Makefile  Makefile.am  Makefile.mk  MessageQ.c  MessageQDrv.c  MessageQTransportShmDrv.c  MultiProc.c  MultiProcDrv.c  NameServerDrv.c  NameServerRemoteNotifyDrv.c  SharedRegion.c  SharedRegionDrv.c
syslink/api/src/notify/: Android.mk  Makefile  Makefile.am  Makefile.mk  NotifyDriverShm.c  NotifyDrvUsr.c
syslink/api/src/procmgr/: Makefile  Makefile.am  Makefile.mk  ProcDEH.c  ProcMMU.c  ProcMgr.c  ProcMgrDrvUsr.c  SysLinkMemUtils.c
syslink/api/src/procmgr/elfload/: ArrayList.c  arm_reloc.c  c60_reloc.c  dload.c  dload4430.c  dlw_client.c  dlw_debug.c  dlw_dsbt.c  dolt_client.c  dolt_debug.c  dolt_dsbt.c  dolt_trgmem.c  elf32.c  symtab.c
syslink/api/src/procmgr/procmgr4430/: Makefile  Makefile.am  Makefile.mk  omap4430proc.c  omap4430procDrvUsr.c  omap4430procDrvUsr.h
syslink/api/src/rcm/: Android.mk  Makefile  Makefile.am  Makefile.mk  RcmClient.c  RcmServer.c
syslink/api/src/sysmemmgr/: Android.mk  Makefile  Makefile.am  SysMemMgr.c
syslink/api/src/sysmgr/: Android.mk  Ipc.c  Makefile.am  Makefile.mk  SysMgr.c
syslink/api/src/utils/: Android.mk  Heap.c  List.c  Makefile  Makefile.am  Makefile.mk  Memory.c  MemoryOS.c  OsalDrv.c  OsalPrint.c  OsalSemaphore.c  String.c
syslink/daemons/inc/: CrashInfo.h  Makefile.am  MemMgrServer_config.h  TilerMgrServer_config.h
syslink/daemons/syslink/: Android.mk  Makefile  Makefile.am  MemMgrServer.c  SyslinkDaemon.c
syslink/daemons/trace/: Android.mk  Makefile  Makefile.am  SyslinkTraceDaemon.c
syslink/samples/: .gitignore  Makefile  Makefile.am
syslink/samples/deh/: Makefile  Makefile.am  Makefile.mk
syslink/samples/dmm/: Android.mk  Makefile  Makefile.am  dmmtestapp.c
syslink/samples/event_listener/: Android.mk  Makefile  Makefile.am  event_listener.c
syslink/samples/inc/: ConfigNonSysMgrSamples.h  MemAllocTest_Config.h  RcmTest_Config.h  Server.h
syslink/samples/interm3/: Android.mk  Makefile  Makefile.am  Makefile.mk  interm3.c
syslink/samples/ipc/: Makefile  Makefile.am  Makefile.mk
syslink/samples/ipc/gateMP/usr/: Android.mk  Makefile  Makefile.am  Makefile.mk
syslink/samples/ipc/gatePeterson/usr/: GatePetersonApp.c  Makefile  Makefile.am
syslink/samples/ipc/heapBuf/usr/: HeapBufApp.c  Makefile  (+2 more)
syslink/samples/make/: Makefile.am  build.mk
syslink/samples/memmgr/: Android.mk  Makefile  Makefile.am  MemMgrServer.c
syslink/samples/mmufault/: Android.mk  Makefile  Makefile.am  mmufault_listener.c
syslink/samples/notify/notifyping/: Android.mk  Makefile  Makefile.am  Makefile.mk  notifyping.c
syslink/samples/notify/notifyxfer/: Makefile  Makefile.mk
syslink/samples/proc_sample/krnl/: Makefile  procmgr_app.c
syslink/samples/procmgr/: Makefile.mk
syslink/samples/procmgr/ducati_load/: Android.mk  Makefile  Makefile.am  Makefile.mk  ducati_load.c
syslink/samples/procmgr/procmgrapp/: Android.mk  Makefile  Makefile.am  Makefile.mk  ProcMgrApp.c
syslink/samples/pwrmgmt/: Makefile  Makefile.am
syslink/samples/pwrmgmt/pmgeneric/: Android.mk  Makefile  Makefile.am  Makefile.mk  slpmtestApp.c  slpmtestApp_config.h  slpmtestOS.c
syslink/samples/pwrmgmt/pmresources/: Android.mk  Makefile  Makefile.am  Makefile.mk  slpmresourcesApp.c  slpmresourcesApp_config.h  slpmresourcesOS.c
syslink/samples/pwrmgmt/pmtransport/: Android.mk  Makefile  Makefile.am  Makefile.mk  slpmtransport.c  slpmtransportApp.c  slpmtransportApp_config.h  slpmtransportOS.c
syslink/samples/rcm/multi_test/: Android.mk  Makefile  Makefile.am  Makefile.mk  RcmClientServerTest.c  RcmMultiClientTest.c  RcmMultiThreadTest.c
syslink/samples/rcm/single_test/: Android.mk  Client.c  Makefile  Makefile.am  Makefile.mk  Server.c  TestApp.c
syslink/samples/tiler/: Android.mk  Makefile  Makefile.am  TilerSyslinkApp.c  TilerSyslinkApp.h  TilerTestApp.c
syslink/samples/utils/: Android.mk  Makefile.am
(+374 files in other folders)
