#
#  bridge/api/inc/Makefile.am
#
#  Bridge API include install Makefile.am file.
#
#  Copyright (C) 2009 Texas Instruments, Inc.
#
#  This program is free software; you can redistribute it and/or modify it
#  under the terms of the GNU Lesser General Public License as published
#  by the Free Software Foundation version 2.1 of the License.
#
#  This program is distributed .as is. WITHOUT ANY WARRANTY of any kind,
#  whether express or implied; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  ----------------------------------------------------------------------------
#  Revision History
#
#
#      REF=ORG
#      Original version.
#  ----------------------------------------------------------------------------

#bridge_api_headers = \
noinst_HEADERS = \
cmmdefs.h \
dbdcd.h \
_dbpriv.h \
DSPNode.h \
errbase.h \
memry.h  \
qosti_dspdecl.h \
std.h \
cmm.h \
_dbdebug.h \
dbtype.h \
DSPProcessor.h \
host_os.h  \
mgrpriv.h \
qosti.h \
strmdefs.h \
csl.h \
dbdefs.h \
devdefs.h \
DSPProcessor_OEM.h \
list.h \
nldrdefs.h \
qos_ti_uuid.h \
sync.h \
dbapi.h \
dbg.h \
dspapi.h \
DSPStream.h \
memdefs.h  \
perfutils.h \
rms_sh.h \
wcdioctl.h \
dbdcddef.h \
dbg_zones.h \
DSPManager.h \
dsptrap.h \
mem.h \
qosregistry.h \
rmstypes.h

#library_include_HEADERS = $(bridge_api_headers)

#Install the headers in library directory - e.g. Syslinklib-1.0:
#library_includedir=$(includedir)/bridge_api_headers
