#  Copyright (C) 2009 Texas Instruments, Inc.
#
#  This program is free software; you can redistribute it and/or modify it
#  under the terms of the GNU Lesser General Public License as published
#  by the Free Software Foundation version 2.1 of the License.
#
#  This program is distributed .as is. WITHOUT ANY WARRANTY of any kind,
#  whether express or implied; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  ----------------------------------------------------------------------------
#  Revision History
#
#
#      REF=ORG
#      Original version.
#  ----------------------------------------------------------------------------

noinst_HEADERS = \
cfg.h \
cfgdefs.h \
cmm.h \
cmmdefs.h \
csl.h \
dbapi.h \
dbc.h \
dbdcd.h \
dbdcddef.h \
dbdefs.h \
dbg.h \
dbg_zones.h \
dbreg.h \
dbtype.h \
devdefs.h \
drv.h \
drvdefs.h \
dspapi.h \
dsptrap.h \
dynamic_loader.h \
errbase.h \
getsection.h \
gt.h \
host_os.h \
list.h \
mem.h \
memdefs.h \
memry.h \
mgrpriv.h \
nldrdefs.h \
qosregistry.h \
qosti.h \
qosti_dspdecl.h \
rms_sh.h \
rmstypes.h \
std.h \
strmdefs.h \
sync.h \
uuidutil.h \
_dbdebug.h \
_dbpriv.h \
wcdioctl.h
