#
#  syslink/api/include/Makefile.am
#
#  SysLink API include install Makefile.am file.
#
#  Copyright (C) 2009 Texas Instruments, Inc.
#
#  This program is free software; you can redistribute it and/or modify it
#  under the terms of the GNU Lesser General Public License as published
#  by the Free Software Foundation version 2.1 of the License.
#
#  This program is distributed .as is. WITHOUT ANY WARRANTY of any kind,
#  whether express or implied; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#
#  ----------------------------------------------------------------------------
#  Revision History
#
#
#      REF=ORG
#      Original version.
#  ----------------------------------------------------------------------------
noinst_HEADERS = \
arm_dynamic.h \
HeapBuf.h  \
MultiProcDrv.h \
ProcMgrDrvUsr.h \
arm_elf32.h \
Heap.h \
MultiProc.h \
ProcMgr.h \
ArrayList.h    \
host_os.h \
NameServerDrvDefs.h  \
profile.h \
Atomic_Ops.h \
_intobject.h  \
NameServerDrv.h  \
Queue.h \
bin_loader.h  \
ipcdefs.h \
NameServer.h   \
RcmClient.h \
_bitops.h \
_ipc.h  \
NameServerRemote.h \
RcmServer.h \
Bitops.h \
ipc.h \
NameServerRemoteNotifyDrvDefs.h \
relocate.h \
Cache.h  \
ipc_ioctl.h \
NameServerRemoteNotifyDrv.h  \
_safe.h \
constants.h  \
ipcioctl.h   \
NameServerRemoteNotify.h  \
SharedRegionDrvDefs.h \
dbc.h  \
IPCManager.h \
notifydefs.h \
SharedRegionDrv.h \
dload_api.h  \
IPCMultiProc.h  \
_NotifyDefs.h \
SharedRegion.h \
dload_endian.h  \
ipctrap.h  \
notify_driverdefs.h  \
shmdefs.h \
dload.h  \
isr.h  \
NotifyDriverDefs.h   \
_signature.h \
dolt_debug.h \
linkcfgdefs_os.h  \
notify_driver.h  \
Stack.h \
dolt_dsbt.h \
List.h \
NotifyDriverShmDrvDefs.h \
static_loader.h \
dolt_trgmem.h \
_ListMP.h \
NotifyDriverShmDrvUsr.h \
Std.h \
dpc.h \
ListMP.h \
NotifyDriverShm.h  \
std_linux.h \
_drvdefs.h \
ListMPSharedMemoryDrvDefs.h \
NotifyDrvDefs.h \
String.h \
elf32.h \
ListMPSharedMemoryDrv.h  \
NotifyDrvUsr.h \
symtab.h \
Gate.h \
ListMPSharedMemory.h\
notifyerr.h \
sync.h \
GateHWSpinLockDrvDefs.h \
load.h \
_Notify.h \
SysLinkMemUtils.h \
GateHWSpinLockDrv.h \
Notify.h \
SysMemMgrDrvDefs.h \
GateHWSpinLock.h \
_notify_shmDriver.h \
SysMemMgrDrv.h \
GateMutex.h \
notify_shmDriver.h \
SysMemMgr.h \
GatePetersonDrvDefs.h\
mem.h \
omap4430procDrvDefs.h \
SysMgrDrvDefs.h \
GatePetersonDrv.h \
MemoryDefs.h \
omap4430proc.h \
SysMgrDrv.h \
GatePeterson.h \
Memory.h \
OsalDrv.h \
SysMgr.h \
GateSpinlock.h \
MemoryOS.h \
osal.h \
test_arm_reloc.h \
gen_utils.h \
mem_os.h \
OsalMutex.h \
_trace.h \
gttrace.h  \
MessageQDrvDefs.h \
OsalPrint.h \
Trace.h \
hal_cache.h \
MessageQDrv.h \
OsalSemaphore.h \
trc.h \
hal_interrupt.h \
MessageQ.h \
platform.h \
UsrUtilsDrv.h \
hal_platform.h \
MessageQTransportShmDrvDefs.h \
print.h \
util.h \
HeapBufDrvDefs.h \
MessageQTransportShmDrv.h \
ProcDefs.h \
version.h \
HeapBufDrv.h \
MessageQTransportShm.h \
_ProcMgrDefs.h \
_HeapBuf.h \
MultiProcDrvDefs.h \
ProcMgrDrvDefs.h

#library_include_HEADERS = $(syslink_api_headers)

#Install the headers in library directory - e.g. Syslinklib-1.0:
#library_includedir=$(includedir)/syslink_api_headers

