#
#   Syslink-IPC for TI OMAP Processors
#
#   Copyright (c) 2008-2010, Texas Instruments Incorporated
#   All rights reserved.
#
#   Redistribution and use in source and binary forms, with or without
#   modification, are permitted provided that the following conditions
#   are met:
#
#   *  Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#
#   *  Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the following disclaimer in the
#     documentation and/or other materials provided with the distribution.
#
#   *  Neither the name of Texas Instruments Incorporated nor the names of
#      its contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
#
#   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
#   AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
#   THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
#   PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
#   CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
#   EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
#   PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
#   OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
#   WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
#   OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
#   EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

library_include_HEADERS = \
arm_dynamic.h \
MultiProcDrv.h \
ProcMgrDrvUsr.h \
dload4430.h \
arm_elf32.h \
IHeap.h \
Heap.h \
_MultiProc.h \
ProcMgr.h \
ArrayList.h    \
host_os.h \
NameServerDrvDefs.h  \
profile.h \
Atomic_Ops.h \
_intobject.h  \
NameServerDrv.h  \
Queue.h \
bin_loader.h  \
ipcdefs.h \
_NameServer.h \
RcmClient.h \
_bitops.h \
_Ipc.h  \
NameServerRemote.h \
RcmServer.h \
RcmTypes.h \
Bitops.h \
relocate.h \
Cache.h  \
_safe.h \
constants.h  \
ipcioctl.h   \
SharedRegionDrvDefs.h \
dbc.h  \
IPCManager.h \
notifydefs.h \
SharedRegionDrv.h \
dload_api.h  \
_NotifyDefs.h \
_SharedRegion.h \
dload_endian.h  \
notify_driverdefs.h  \
shmdefs.h \
dload.h  \
isr.h  \
_signature.h \
dlw_debug.h \
linkcfgdefs_os.h  \
notify_driver.h  \
Stack.h \
dlw_dsbt.h \
List.h \
static_loader.h \
dlw_trgmem.h \
_ListMP.h \
Std.h \
dpc.h \
ListMPDrvDefs.h \
ListMPDrv.h \
std_linux.h \
_drvdefs.h \
NotifyDrvDefs.h \
String.h \
elf32.h \
NotifyDrvUsr.h \
symtab.h \
Gate.h \
notifyerr.h \
sync.h \
load.h \
_Notify.h \
SysLinkMemUtils.h \
_notify_shmDriver.h \
GateMutex.h \
notify_shmDriver.h \
GateMPDrvDefs.h\
mem.h \
omap4430procDrvDefs.h \
IpcDrvDefs.h \
GateMPDrv.h \
MemoryDefs.h \
omap4430proc.h \
IpcDrv.h \
IGateProvider.h \
IObject.h \
_GateMP.h \
Memory.h \
OsalDrv.h \
IpcUsr.h \
IpcCmdBase.h \
MemoryOS.h \
osal.h \
test_arm_reloc.h \
gen_utils.h \
mem_os.h \
OsalMutex.h \
_trace.h \
gttrace.h  \
MessageQDrvDefs.h \
OsalPrint.h \
Trace.h \
hal_cache.h \
MessageQDrv.h \
OsalSemaphore.h \
trc.h \
hal_interrupt.h \
IMessageQTransport.h \
_MessageQ.h \
ti/ipc/MessageQ.h \
platform.h \
UsrUtilsDrv.h \
hal_platform.h \
print.h \
util.h \
HeapBufMPDrvDefs.h \
HeapMemMPDrvDefs.h \
ProcDefs.h \
version.h \
HeapBufMPDrv.h \
HeapMemMPDrv.h \
_ProcMgrDefs.h \
_HeapBufMP.h \
_HeapMemMP.h \
MultiProcDrvDefs.h \
ProcMgrDrvDefs.h \
TraceDrv.h \
TraceDrvDefs.h \
ProcMMU.h

library_includedir=$(includedir)/syslink
